# citeproc-py

./: .autorc  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  bibparse.py  bibtex.py  coveralls.py  harhar.rst  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
citeproc/: __init__.py  _version.py  frontend.py  model.py  py2compat.py  source.py  string.py  string_utils.py  types.py
citeproc/data/locales/: input.txt  locales-cs-CZ.xml  locales-pl-PL.xml  locales.json
citeproc/data/styles/: apa.csl  bluebook.csl  chicago.csl  chicago_notes.csl  harvard1.csl  mla.csl  oscola.csl  vancouver.csl
citeproc/formatter/: __init__.py  html.py  plain.py  rst.py
citeproc/scripts/: csl_unsorted.py
citeproc/source/: __init__.py  json.py
citeproc/source/bibtex/: __init__.py  bibparse.py  bibtex.py  macro.py
citeproc/source/bibtex/latex/: __init__.py  macro.py
citeproc/sources/: __init__.py
citeproc/sources/bibtex/: bibtex.py
csl/: __init__.py  model.py
examples/: bibtex.py  citeproc_json.py  xampl_nomacro.bib
tests/: check_string.py  citeproc-test.py  failing_tests.txt  month-test.bib  pages-test.bib  test.bib  test_base.py  test_bibliography.py  test_bibparse.py  test_bibtex.py  test_html.py  test_latex.py  test_resources.py  test_style_loading.py
tests/local/: condition_LocatorVariables.txt  term_EmptyValueForTermSkipsField.txt
